public/css/main.css
/* ... */
/*fonts*/
@font-face {
  font-family: 'source-sans-pro-v9-latin-regular';
  src:  url('/fonts/source-sans-pro-v9-latin-regular.eot');
  src:  url('/fonts/source-sans-pro-v9-latin-regular.eot#iefix') format('embedded-opentype'),
  url('/fonts/source-sans-pro-v9-latin-regular.woff') format('woff'),
  url('/fonts/source-sans-pro-v9-latin-regular.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'inconsolata-v15-latin-regular';
  src:  url('/fonts/inconsolata-v15-latin-regular.eot');
  src:  url('/fonts/inconsolata-v15-latin-regular.eot#iefix') format('embedded-opentype'),
  url('/fonts/inconsolata-v15-latin-regular.woff') format('woff'),
  url('/fonts/inconsolata-v15-latin-regular.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

/*elements*/
html {
  color: #052f4b;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased !important;
  -moz-font-smoothing: antialiased !important;
  text-rendering: optimizelegibility !important;
  padding-top: 35px;
}
.mono {
  font-family: 'inconsolata-v15-latin-regular';
}
body {
  font-family: 'source-sans-pro-v9-latin-regular';
  padding-bottom: 2.1rem;
  background: #F3F5F6;
}
body .grayed {
  color: rgba(33, 37, 41, 0.5);
}
a {
  color: #2e75ff;
}
a.grayed {
  color: rgba(46, 117, 255, 0.75) !important;
}
h4 {
  margin-top: 10px;
}

/**testnet theme**/
body.theme-testnet .top-nav,
body.theme-testnet .navbar-fixed-bottom {
  /**background: #012f30;**/
  background: #116466;
  color: #fff;
}

body.theme-testnet .navbar-fixed-bottom .nav-item {
  color: #fff;
}
body.theme-testnet .top-search {
 color: #fff;
}
body.theme-testnet #menuToggle .patty {
  background: #fff;
}


/**simnet theme**/
body.theme-simnet .top-nav,
body.theme-simnet .navbar-fixed-bottom {
  background: #076191;
  color: #fff;
}
body.theme-simnet .top-search {
 color: #fff;
}

body.theme-simnet .navbar-fixed-bottom .nav-item {
  color: #fff;
}
body.theme-simnet #menuToggle .patty {
  background: #fff;
}


/*dark theme*/
body.darkBG {
  background: #3B3F45;
  color: #fdfdfd;
}
body .grayed {
  color: rgba(253, 253, 253, 0.5);
}
body.darkBG a,
body.darkBG a:hover {
  color: #94ffca;
}
body.darkBG a.grayed,
body.darkBG a.grayed:hover {
  color: rgba(148, 255, 202, 0.75) !important;
}
body.darkBG .table thead th {
  vertical-align: bottom;
}
body.darkBG .flex-table .header,
body.darkBG .table thead tr {
  background: #2d2d2d !important;
}
body.darkBG .flex-table .flex-table-row,
body.darkBG .flex-table .header,
body.darkBG .table tr {
  border-bottom: 1px solid #2d2d2d;
}
.table.no-border tr {
  border-bottom: none !important;
}

body.darkBG .top-nav,
body.darkBG .navbar-fixed-bottom {
  background: #292929;
  color: #3c4044;
}
body.darkBG .top-nav a,
body.darkBG .navbar-fixed-bottom a {
  color: #fff;
}
body.darkBG .page-link {
  background-color: rgba(255, 255, 255, 0.18);
  border: 1px solid rgba(221, 221, 221, 0);
}
body.darkBG .page-item.disabled .page-link {
  border-color: transparent;
  background-color: #565656;
}
body.darkBG .json-block {
  color: #fdfdfd;
}
body.darkBG .top-search {
 color: #7fbdff;
}
body.darkBG .top-nav input:-webkit-autofill {
  -webkit-animation-name: autofillDark;
  -webkit-animation-fill-mode: both;
}
body.darkBG .navbar-fixed-bottom .nav-item {
  color: #dcdcdc;
}
body.darkBG #menuToggle .patty {
  background: #fdfdfd;
}
body.darkBG #menuToggle input:checked ~ .patty {
  background: #fbfbfb;
}
body.darkBG #hamburger-menu a {
  color: #fbfbfb;
}
body.darkBG #hamburger-menu a:hover {
  color: #94ffca;
}
body.darkBG #menu {
  background:  #2a2a2a;
  box-shadow: 0px 0px 0px 1px #ffffff33;
}
body.darkBG .progress {
  background-color: #757575;
}
.darkBG select,
.darkBG input[type=number] {
  color: #fff !important;
  background: #2a2a2a !important;
  border-color: #191919 !important;
}
.darkBG .nav-pills .nav-link.active {
  background-color: #2DD8A3;
  color: black;
}

.flash {
  animation-duration: .4s;
  animation-name: flashBg;
  animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
}
@keyframes flashBg {
  0% { background: transparent }
  100% { background: #afafaf14 }
  0% { background: transparent }
}

/*utils*/
.jsonly {
  display: none;
}
.anchor {
  position: relative;
  top: -33px;
}
.clickable {
  cursor: pointer;
}
.hidden {
  display: none;
}
.nowrap {
  white-space: nowrap;
}
.break-word {
  word-wrap: break-word;
  word-break: break-all;
}
.color-inherit {
  color: inherit !important;
}
.fs11 {
  font-size: 11px !important;
}
.fs12 {
  font-size: 12px !important;
}
.fs13 {
  font-size: 13px !important;
}
.fs14 {
  font-size: 14px !important;
}
.fs15 {
  font-size: 15px !important;
}
.fs16 {
  font-size: 16px !important;
}
.fs18 {
  font-size: 18px !important;
}
.fs24 {
  font-size: 24px !important;
}
.fs28 {
  font-size: 28px !important;
}
.no-underline,
.no-underline:hover {
  text-decoration: none;
}
.trailing-zeroes {
  opacity: .3
}
.op70 {
  opacity: .7
}
.lh1rem {
  line-height: 1rem;
}
.h2rem {
  height: 2rem;
}
.h3rem {
  height: 3rem;
}
.w80 {
  width: 80px;
}
.w120 {
  width: 120px;
}
.w142 {
  width: 142px;
}
.vam {
  vertical-align: middle;
}
.p03rem0 {
  padding: .3rem 0;
}
.p10 {
  padding: 10px;
}

/*nav*/
.top-nav,
.navbar-fixed-bottom {
  position: fixed;
  background: #3B3F45;
  z-index: 1000;
}
.top-nav {
  width: 100%;
  top: 0;
  background: #fff;
}
.navbar-fixed-bottom {
  bottom: 0;
  width: 100%;
  background: #fff;
  font-size: 14px;
  line-height: 22px;
}
.top-nav a {
  color: #052f4b;
}
.top-nav .dcricon-decred {
  font-size: 25px;
  top: 1px;
  position: relative;
}
.top-search {
  height: 30px;
  margin: 2px 0 2px 2px !important;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
  border-radius: 0px;
  background: transparent !important;
}

#hamburger-menu {
  flex: 0 40px;
  z-index: 10;
  width: 100%;
  top: 0px;
  right: 0px;
  left: 0px;
}
/* ... */

